--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "sortie"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "sortie"
+path = "src/main.rs"
+
 [dependencies]
 anyhow = "1.0"
 clap = "4.5"
